kubernetes/script/sonarqube/postgresdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      app: postgresdb
  serviceName: "postgresdb"
  replicas: 1
  template:
    metadata:
      labels:   
        app: postgresdb
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-114
      containers:
      - name: postgresdb
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgresdb
        volumeMounts:
        - name: postgres-pv-data
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: postgres-pv-data
        persistentVolumeClaim:
          claimName: postgresdb

---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
  selector:
    app: postgresdb
